# MinesweeperOnline

./: Cargo.toml  explain_note.txt  presentation.pptx
backend/: Cargo.toml
backend/src/: lib.rs
frontend/: Cargo.toml
migrations/2021-01-26-163130_match/: up.sql
migrations/2021-01-27-110926_move/: up.sql
src/: lib.rs
src/client/python/: main.py  minesweeper.py  minesweeper_gui.py  text.py  utils.py
src/client/python/dialogues/: edit_playlist.py
src/client/python/dialogues/forms/: add_track_dialog.ui  edit_playlist.ui
src/client/python/music/: music.py
src/client/python/scenes/: menu_scene.py  play_scene.py  scene.py  setting_scene.py  setup_scene.py
src/client/python/settings/: settings.py
src/client/python/utils/: event_dispatcher.py  group.py  pobject.py  slider.py  text.py  utils.py
src/client/python/widgets/: button.py  cell.py  slider.py  text.py
src/db/: mod.rs  models.rs  schema.rs
src/move/: mod.rs
src/server/migrations/2021-01-26-163130_match/: down.sql  up.sql
src/server/migrations/2021-01-27-110926_move/: down.sql  up.sql
src/server/src/db/: mod.rs
